fix title to nowrap

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -88,6 +88,7 @@ h1 {
     max-width: 100%;
     word-wrap: break-word;
     overflow-wrap: break-word;
+    white-space: nowrap;
 }
 
 h2 {
